--- a/src/components/BlogPost/Blog.css
+++ b/src/components/BlogPost/Blog.css
@@ -72,3 +72,17 @@
   padding: 10px;
   border-radius: 10px;
 }
+.delete-btn-enabled {
+  background-color: red;
+  color: white;
+  border: none;
+  padding: 10px;
+  border-radius: 10px;
+}
+.delete-btn-disabled {
+  background-color: rgb(234, 228, 228);
+  color: white;
+  border: none;
+  padding: 10px;
+  border-radius: 10px;
+}
