--- a/src/components/BlogPost/Blog.css
+++ b/src/components/BlogPost/Blog.css
@@ -66,27 +66,38 @@
   background-color: rgb(59, 58, 58);
   color: white;
   border: none;
-  padding: 10px;
-  border-radius: 10px;
+  padding: 5px;
+  border-radius: 5px;
 }
 .like-btn-disabled {
   background-color: rgb(234, 228, 228);
   color: white;
   border: none;
-  padding: 10px;
-  border-radius: 10px;
+  padding: 5px;
+  border-radius: 5px;
 }
 .delete-btn-enabled {
   background-color: red;
   color: white;
   border: none;
-  padding: 10px;
+  padding: 5px;
   border-radius: 10px;
 }
 .delete-btn-disabled {
   background-color: rgb(234, 228, 228);
   color: white;
   border: none;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.login-comment {
   padding: 10px;
-  border-radius: 10px;
+  background-color: aliceblue;
+  color: red;
+}
+
+.comment-title {
+  text-align: center;
+  margin-top: 7px;
 }
